<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.authentication.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/login_email"
        android:layout_below="@id/textView"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawableTint="@color/teal_700"
        android:hint="@string/email"
        android:layout_marginEnd="16dp"
        android:inputType="textEmailAddress"
        android:drawablePadding="8dp"
        android:autofillHints="emailAddress"
        android:paddingVertical="16dp"
        />

    <EditText
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:id="@+id/login_password"
        android:layout_below="@id/login_email"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="8dp"
        android:drawableTint="@color/teal_700"
        android:hint="@string/password"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:paddingVertical="16dp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:onClick="onLoginClick"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_below="@id/login"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/account_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginEnd="8dp"
            android:text="@string/don_t_have_an_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/sign_up"
            android:onClick="onSignupClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/or" />

        <TextView
            android:id="@+id/continue_as_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_as_guest"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginStart="8dp"
            android:onClick="onContinueAsGuestInLoginClick" />

    </LinearLayout>

</RelativeLayout>