<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:content=".ui.authentication.RegisterActivity">

    <TextView
        android:text="@string/registration_title"
        android:id="@+id/registration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/registration_title"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawableTint="@color/teal_700"
        android:hint="@string/username"
        android:inputType="text"
        android:drawablePadding="8dp"
        android:autofillHints="username"
        android:paddingVertical="16dp"
        />

    <EditText
        android:id="@+id/signup_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/signup_username"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawableTint="@color/teal_700"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawablePadding="8dp"
        android:autofillHints="emailAddress"
        android:paddingVertical="16dp"
        />

    <EditText
        android:id="@+id/signup_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/signup_email"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="8dp"
        android:drawableTint="@color/teal_700"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:paddingVertical="16dp" />
    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_password"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:onClick="onRegisterClick"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/signup"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changed_your_mind"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/continue_as_guest"
            android:onClick="onContinueAsGuestInRegister" />

    </LinearLayout>

</RelativeLayout>