<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item
        android:id="@+id/nav_home"
        android:title="Home"/>

    <item
        android:id="@+id/nav_favourites"
        android:title="@string/my_favorites" />

    <item
        android:id="@+id/nav_my_recipes"
        android:title="@string/my_recipes" />

    <item
        android:id="@+id/nav_logout"
        android:title="Logout"
        android:visible="false" />

    <item
        android:id="@+id/nav_login"
        android:title="Login"
        android:visible="true" />

</menu>