<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lin_lay_main"
...
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_filter3" />
        </LinearLayout>

        <ListView
            android:id="@+id/dishList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
...
